--- a/readme
+++ b/readme
@@ -15,3 +15,5 @@ HttpClient连接池抛出大量的ConnectPoolTimeoutException:Timeout waiting fo
 #丰富了Nginx的部分，增加了Nginx的应用部分，包括Nginx动静分离,防盗链，负载均衡等。
 
 #新增了网络IO框架Netty的相关概念
+
+#新增了Restful API的一些设计的实战例子
